MDEV-8406: Test failure on encryption.innodb-page_encryption_log_encryption in P7/P8

Used wrong type for encryption_key_id and page_compression_level in
table options. Make explicit casts for calls also.